crates/catalog-metastore/src/snapshots/catalog_metastore__metastore__tests__create_database.snap
---
source: crates/catalog-metastore/src/metastore.rs
expression: "(no_volume_result, all_databases, fetched_db, all_dbs_after)"
---
(
    Err(
        0: Volume testv1 not found, at file:line:col,
    ),
    [
        RwObject {
            data: Database {
                ident: "testdb",
                properties: None,
                volume: "testv1",
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
    Some(
        RwObject {
            data: Database {
                ident: "testdb",
                properties: None,
                volume: "testv2",
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ),
    [],
)
