crates/catalog-metastore/src/snapshots/catalog_metastore__metastore__tests__create_s3table_volume.snap
---
source: crates/catalog-metastore/src/metastore.rs
expression: "(volume, created_volume)"
---
(
    Volume {
        ident: "s3tables",
        volume: S3Tables(
            S3TablesVolume {
                endpoint: Some(
                    "https://my-bucket-name.s3.us-east-1.amazonaws.com/",
                ),
                credentials: AccessKey(
                    AwsAccessKeyCredentials {
                        aws_access_key_id: "kPYGGu34jF685erC7gst",
                        aws_secret_access_key: "**********",
                    },
                ),
                arn: "arn:aws:s3tables:us-east-1:111122223333:bucket/my-table-bucket",
            },
        ),
    },
    Volume {
        ident: "s3tables",
        volume: S3Tables(
            S3TablesVolume {
                endpoint: Some(
                    "https://my-bucket-name.s3.us-east-1.amazonaws.com/",
                ),
                credentials: AccessKey(
                    AwsAccessKeyCredentials {
                        aws_access_key_id: "kPYGGu34jF685erC7gst",
                        aws_secret_access_key: "**********",
                    },
                ),
                arn: "arn:aws:s3tables:us-east-1:111122223333:bucket/my-table-bucket",
            },
        ),
    },
)
