crates/catalog-metastore/src/snapshots/catalog_metastore__metastore__tests__create_volumes.snap
---
source: crates/catalog-metastore/src/metastore.rs
expression: "(test_volume, all_volumes)"
---
(
    Some(
        Object {
            "ident": String("test"),
            "type": String("memory"),
            "created_at: "TIMESTAMP",
            "updated_at: "TIMESTAMP",
        },
    ),
    [
        RwObject {
            data: Volume {
                ident: "test",
                volume: Memory,
            },
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
)
