crates/catalog-metastore/src/snapshots/catalog_metastore__metastore__tests__duplicate_volume.snap
---
source: crates/catalog-metastore/src/metastore.rs
expression: result
---
Err(
    0: Volume test already exists, at file:line:col,
)
